--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1140,7 +1140,7 @@ body {
 .modal {
     display: none;
     position: fixed;
-    z-index: 1000;
+    z-index: 99999;
     left: 0;
     top: 0;
     width: 100%;
